crates/kernel/brioche-macro/tests/ui/fail_hashset.stderr
error: Field `tags` uses HashSet. HashSet is prohibited in BriocheExtensionType persisted state. Use BTreeSet or IndexSet instead.
 --> tests/ui/fail_hashset.rs:6:15
  |
6 |     pub tags: HashSet<String>,
  |               ^^^^^^^
